--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon shortcut" type="image/png" href="./app/assets/settings.png">
 
-    <title>Alexander Kozovski</title>
+    <title>flugchen by Flightline</title>
     <link rel="stylesheet" href="./app/styles/normalizer.css">
     <link rel="stylesheet" href="./app/styles/resets.css">
   </head>
