--- a/src/app/styles/resets.css
+++ b/src/app/styles/resets.css
@@ -22,7 +22,7 @@ html, body, #root-entry {
   background-color:#f3f3f3;
 }
 
-.alex-port-app{
+.flugchen-app{
   height: 100%;
   display: flex;
   flex-flow: row nowrap;
@@ -42,7 +42,7 @@ ul {
     flex-flow: row wrap;
 
   }
-  .alex-port-app{
+  .flugchen-app{
     height: 100%;
     display: flex;
     flex-flow: row wrap;
