--- a/src/app/views/Facebook/facebook.css
+++ b/src/app/views/Facebook/facebook.css
@@ -8,6 +8,13 @@
 
 
 }
+
+.sub{
+  font-weight:bold;
+  font-size:1em;
+  color: var(--bbRedOrange);
+  padding-bottom:10px;
+}
 .mybutton {
 
   font-size: 5em;
