--- a/src/app/views/Name/name.css
+++ b/src/app/views/Name/name.css
@@ -4,17 +4,26 @@
   color: var(--darkGrey);
   flex-grow: 1;
   font-weight:bold;
-padding-right:20px;
+  padding-right:20px;
   font-size: 4em;
+}
+
+.desc{
+  padding-top:20px;
+  color: var(--bbBlue);
+  font-size: 1em;
 }
 
 @media only screen and (max-width: 768px) {
 
   .myname {
-  font-size: 3em;
-
-
+    font-size: 3em;
   }
+
+  .desc{
+    font-size: 1em;
+  }
+
 
 }
 
