--- a/src/app/views/Name/name.css
+++ b/src/app/views/Name/name.css
@@ -12,6 +12,7 @@
   padding-top:20px;
   color: var(--bbBlue);
   font-size: 1em;
+  margin-right:0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -22,6 +23,9 @@
 
   .desc{
     font-size: 1em;
+    line-height: 96%;
+    padding-bottom:10px;
+    margin-right:-60px;
   }
 
 
